[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ko-nexus"
version = "1.0.2"
description = "Amjko's dependency injection container for Python."
readme = "README.md"
authors = [{ name = "Amjko2234", email = "amjko2234@gmail.com" }]
license = { file = "MIT" }
requires-python = ">=3.14.0"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Inteded Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
    
[project.urls]
Homepage = "https://github.com/Amjko2234/ko-nexus"
Repository = "https://github.com/Amjko2234/ko-nexus"
Issues = "https://github.com/Amjko2234/ko-nexus/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.package-data]
ko_nexus = ["py.typed"]

[tool.basedpyright]
include = ["src", "tests"]
pythonPlatform = "Linux"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.mypy]
python_version = "3.14"
strict = true